# DesktopQuery

./: .replit  pnpm-lock.yaml  pyproject.toml  replit.md  replit.nix
.agents/: agent_assets_metadata.toml
.agents/memory/: MEMORY.md  desktop-tauri-packaging.md  e2e-testing.md  rag-backend.md  rag-frontend.md  rag-mobile.md
.github/workflows/: desktop-release.yml
artifacts/mobile/: app.json  package.json
artifacts/mobile/.replit-artifact/: artifact.toml
artifacts/mobile/app/: _layout.tsx
artifacts/mobile/components/: AppHeader.tsx  Button.tsx  Chip.tsx  CitationCard.tsx  DocumentCard.tsx  EmptyState.tsx  StatusPill.tsx
artifacts/mobile/constants/: colors.ts
artifacts/mobile/lib/: api.ts  config.tsx
artifacts/web/: index.html  package.json  vite.config.ts
artifacts/web/.replit-artifact/: artifact.toml
artifacts/web/src/: App.tsx  index.css
artifacts/web/src-tauri/: .gitignore  Cargo.toml  tauri.conf.json
artifacts/web/src-tauri/capabilities/: default.json
artifacts/web/src-tauri/icons/: icon.icns
artifacts/web/src-tauri/src/: main.rs
attached_assets/: Pasted-The-goal-is-to-create-a-local-first-Retrieval-Augmented_1782765663945.txt
backend/: .gitignore  desktop_entry.py  requirements.txt  run.py
backend/app/: config.py  database.py  main.py  models.py
backend/app/exports/: __init__.py
backend/app/ingestion/: chunking.py  indexer.py  parsers.py
backend/app/monitoring/: watcher.py
backend/app/providers/: base.py  embeddings.py  llm.py  vectorstore.py
backend/app/rag/: comparisons.py  pipeline.py  prompts.py  (+2 more)
docs/: desktop-signing.md
scripts/desktop/: README.md  build-desktop.sh  build-sidecar.sh  make-update-manifest.sh  shell-smoke-test.py  shell.nix  smoke-test.py
(+40 files in other folders)
