[project]
name = "repl-nix-workspace"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.11"
dependencies = [
    "anthropic>=0.113.0",
    "beautifulsoup4>=4.15.0",
    "chromadb>=1.5.9",
    "fastapi>=0.138.2",
    "httpx>=0.28.1",
    "lxml>=6.1.1",
    "markdown>=3.10.2",
    "openai>=2.44.0",
    "openpyxl>=3.1.5",
    "pandas>=3.0.3",
    "pillow>=12.2.0",
    "pydantic>=2.13.4",
    "pydantic-settings>=2.14.2",
    "pyinstaller>=6.21.0",
    "pymupdf>=1.28.0",
    "pytesseract>=0.3.13",
    "python-docx>=1.2.0",
    "python-multipart>=0.0.32",
    "python-pptx>=1.0.2",
    "reportlab>=5.0.0",
    "striprtf>=0.0.32",
    "uvicorn[standard]>=0.49.0",
    "watchdog>=6.0.0",
]
